--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "url": "https://github.com/ccnmtl/passhugo/issues"
   },
   "dependencies": {
-    "specialneedsvisit-pack": "^0.1.1",
-    "supportservices-pack": "^0.1.1"
+    "specialneedsvisit-pack": "^0.1.3",
+    "supportservices-pack": "^0.1.2",
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "jshint": "~2.9.1-rc1",
