--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "specialneedsvisit-pack": "^0.1.3",
     "supportservices-pack": "^0.1.2",
+    "dentalofficelocation-pack": "^0.1.2",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
