--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "webpack": "^3.3.0"
   },
   "devDependencies": {
-    "jshint": "~2.9.1-rc1",
-    "jscs": "~3.0.7"
+    "eslint": "~4.7.0",
+    "eslint-config-scanjs": "^1.0.0-beta4",
+    "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
+    "eslint-plugin-security": "^1.4.0"
   }
 }
