--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-cli": "~4.9.1"
   },
   "devDependencies": {
+    "acorn": "8.6.0",
     "eslint": "~8.3.0",
     "eslint-plugin-security": "^1.4.0"
   }
