--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "webpack-cli": "~4.10.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
     "acorn": "8.12.0",
-    "eslint": "~8.57.0",
-    "eslint-plugin-security": "^3.0.0"
+    "eslint": "~9.7.0",
+    "eslint-plugin-security": "^3.0.0",
+    "globals": "^15.8.0"
   }
 }
